# provenance-storage

./: .env.example  README.md  api.Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  fuseki_docker_tools.md  load_crate.py  pyproject.toml  query_version.txt  requirements.txt  setup.cfg  try_minio.py
.github/workflows/: main.yml
crate1/: ro-crate-metadata.json
crate2/: ro-crate-metadata.json
examples/ml-predict-tissue-perc/: Dockerfile  README.md  gen_crates.sh  get_metric.cwl  get_metric.py  params.yaml  predictions.cwl  query.txt  query_durations.txt  requirements.txt
examples/provenance-storage-ui/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
examples/provenance-storage-ui/src/: App.tsx  ProvStorUI.tsx
examples/provenance-storage-ui/src/components/: BrowsePanel.tsx  DownloadPanel.tsx  GetPanel.tsx  QueryPanel.tsx  StatusPanel.tsx  UploadPanel.tsx
examples/provenance-storage-ui/src/components/UI/: Button.tsx  Input.tsx  Pill.tsx  Row.tsx  Section.tsx  Tabs.tsx  Textarea.tsx
examples/provenance-storage-ui/src/utils/: api.ts  config.tsx
examples/queries/: number_of_steps.txt  software_used.txt  workflow_engines.txt  workflow_input_params.txt  workflow_run_duration.txt
fuseki/: README.md  docker-compose.yaml  load_crate.py  query.txt  query_store.py
fuseki/crate1/: ro-crate-metadata.json
src/provstor/: __init__.py  backtrack.py  cli.py  config.py  constants.py  get.py  list.py  load.py  queries.py  query.py
src/provstor_api/: __init__.py  config.py  main.py  queries.py  requirements.txt
src/provstor_api/routes/: __init__.py  backtrack.py  get.py  pathops.py  query.py  upload.py
src/provstor_api/utils/: __init__.py  gencrate.py  get_utils.py  load.py  queries.py  query.py
src/provstore/: cli.py  get.py  load.py  queries.py  query.py
tests/: conftest.py  test_api_integration.py  test_api_unit.py  test_backtrack.py  test_cli.py  test_config.py  test_get.py  test_list.py  test_query.py
tests/data/: query.txt
tests/data/crate2/: ro-crate-metadata.json
tests/data/proccrate1/: aux.vcf  ro-crate-metadata.json
tests/data/proccrate2/: aux.txt  ro-crate-metadata.json
tests/data/provcrate1/: README.md  main.nf  nextflow.config  ro-crate-metadata.json  sample.csv
tests/data/provcrate1/csv/: foobar.csv
tests/data/provcrate1/pipeline_info/: software_versions.yml
tools/regen_crate/: regen_crate.py  requirements.txt
