
# Copyright © 2024-2025 CRS4
#
# This file is part of ProvStor.
#
# ProvStor is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# ProvStor is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with ProvStor. If not, see <https://www.gnu.org/licenses/>.


[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "provstor"
description = "Store provenance as an RDF graph"
keywords = ["provenance", "RDF", "graph"]
authors = [{name = "CRS4", email = "ro-crate@elixir-europe.org"}, {name = "RO-Crate community"}]
requires-python = ">=3.12, <4"
dependencies = [
    "rdflib~=7.0.0",
    "minio~=7.2.0",
    "arcp==0.2.1",
    "click~=8.1",
]
dynamic = ["version"]

[project.urls]
homepage = "https://repolab.crs4.it/sca/provenance-storage"

[project.scripts]
provstor = "provstor.cli:cli"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "provstor.__version__"}
