# Copyright © 2024-2025 CRS4
# Copyright © 2025 BSC

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "provstor"
description = "Store provenance as an RDF graph"
keywords = ["provenance", "RDF", "graph", "API"]
authors = [{name = "CRS4", email = "ro-crate@elixir-europe.org"}, {name = "RO-Crate community"}]
requires-python = ">=3.12, <4"
dependencies = [
    "rdflib~=7.0.0",
    "minio~=7.2.0",
    "arcp==0.2.1",
    "click~=8.1",
    "fastapi~=0.116.1",
    "uvicorn[standard]~=0.24.0",
    "python-multipart~=0.0.20",
    "requests~=2.32.0",
    "httpx~=0.25.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://repolab.crs4.it/sca/provenance-storage"

[project.scripts]
provstor = "provstor.cli:cli"
provstor-api = "provstor_api.main:main"

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "pytest-asyncio~=0.21.0",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "provstor.__version__"}
